[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["Laksh <lakshnv@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sqlalchemy = "^2.0.38"
smolagents = {extras = ["litellm"], version = "^1.9.2"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
